RESOLVED FIXED194516
Entering fullscreen inside a shadow root will not set fullscreen pseudoclasses outside of root
https://bugs.webkit.org/show_bug.cgi?id=194516
Summary Entering fullscreen inside a shadow root will not set fullscreen pseudoclasse...
Jer Noble
Reported 2019-02-11 15:22:12 PST
Entering fullscreen inside a shadow root will not set fullscreen pseudoclasses outside of root
Attachments
Patch (4.91 KB, patch)
2019-02-11 15:24 PST, Jer Noble
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (9.54 MB, application/zip)
2019-02-11 17:29 PST, EWS Watchlist
no flags
Patch for landing (5.79 KB, patch)
2019-02-13 14:31 PST, Jer Noble
no flags
Jer Noble
Comment 1 2019-02-11 15:22:53 PST
Jer Noble
Comment 2 2019-02-11 15:24:44 PST
EWS Watchlist
Comment 3 2019-02-11 17:29:57 PST
Comment on attachment 361715 [details] Patch Attachment 361715 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/11114792 New failing tests: fast/shadow-dom/fullscreen-in-shadow-full-screen-ancestor.html
EWS Watchlist
Comment 4 2019-02-11 17:29:59 PST
Created attachment 361741 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Antoine Quint
Comment 5 2019-02-12 00:12:34 PST
Comment on attachment 361715 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=361715&action=review > Source/WebCore/dom/Element.cpp:3413 > + return element->document().ownerElement(); Does that change this method's behaviour? Note that it's also used by Element::computedTouchActions() to iterate through parents of an element (regardless of compositing status, assuming "composed tree" here is related to that) going all the way through hosting frames.
Antoine Quint
Comment 6 2019-02-12 00:15:48 PST
(In reply to Antoine Quint from comment #5) > Comment on attachment 361715 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=361715&action=review > > > Source/WebCore/dom/Element.cpp:3413 > > + return element->document().ownerElement(); > > Does that change this method's behaviour? Note that it's also used by > Element::computedTouchActions() to iterate through parents of an element > (regardless of compositing status, assuming "composed tree" here is related > to that) going all the way through hosting frames. Answering my own question, I guess not, since only the call to parentElement() changes.
Jer Noble
Comment 7 2019-02-13 14:30:10 PST
(In reply to Antoine Quint from comment #5) > Comment on attachment 361715 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=361715&action=review > > > Source/WebCore/dom/Element.cpp:3413 > > + return element->document().ownerElement(); > > Does that change this method's behaviour? Note that it's also used by > Element::computedTouchActions() to iterate through parents of an element > (regardless of compositing status, assuming "composed tree" here is related > to that) going all the way through hosting frames. I did note, and pointed this out to Ryosuke, who said the current behavior was wrong there too. > Answering my own question, I guess not, since only the call to parentElement() changes. Yes, the difference between parentElement() and parentElementInComposedTree() has to do with how Shadow DOM nodes are "composed" together into the final DOM tree, and not really about the render tree.
Jer Noble
Comment 8 2019-02-13 14:31:28 PST
Created attachment 361939 [details] Patch for landing
WebKit Commit Bot
Comment 9 2019-02-13 16:11:58 PST
Comment on attachment 361939 [details] Patch for landing Clearing flags on attachment: 361939 Committed r241484: <https://trac.webkit.org/changeset/241484>
WebKit Commit Bot
Comment 10 2019-02-13 16:12:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.