Entering fullscreen inside a shadow root will not set fullscreen pseudoclasses outside of root https://bugs.webkit.org/show_bug.cgi?id=194516 <rdar://problem/44678353>

Reviewed by Antoine Quint.

Source/WebCore:

Test: fast/shadow-dom/fullscreen-in-shadow-full-screen-ancestor.html

When walking up the element ancestor chain, use parentElementInComposedTree() to
walk past the shadow root boundary.

* dom/Element.cpp:
(WebCore::parentCrossingFrameBoundaries):

LayoutTests:

* fast/shadow-dom/fullscreen-in-shadow-full-screen-ancestor-expected.txt: Added.
* fast/shadow-dom/fullscreen-in-shadow-full-screen-ancestor.html: Added.
* platform/ios-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/209030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241484 268f45cc-cd09-0410-ab3c-d52691b4dbfc